--- a/style.css
+++ b/style.css
@@ -63,20 +63,22 @@ nav,
 ul {
     width: initial;
 }
-
+.hiddenNavbar{
+    height: 100%;
+    width: 100%;
+    position: relative;
+}
 .navbar {
     transition: all ease 0.4s;
     position: absolute;
-    display: block;
+    display: none;
     width: 100%;
     height: 80vh;
     width: 80%;
-    opacity: 0;
     left: 10%;
     top: 120%;
     color: white;
-    background: rgba(137, 136, 136, 0.934);
-    backdrop-filter: white;
+    background: rgba(126, 126, 126, 0.767);
     border-radius: 20px;
     z-index: 999;
 }
